--- a/myLoveFish/.vscode/launch.json
+++ b/myLoveFish/.vscode/launch.json
@@ -13,6 +13,7 @@
             "request": "attach",
             "name": "Attach to Chrome",
             "port": 9222,
+            "url": "file:///Users/Jon/Desktop/GitHub/HTML_GameProjects/myLoveFish/index.html",
             "webRoot": "${workspaceRoot}"
         }
     ]
